src/main/metadata-excluded/objects/smart_SSI_Cleansing_result__c.object
<CustomObject>
    <fields>
        <fullName>Car_Model_Unmatched__c</fullName>
        <label>Car Model Unmatched</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrentMonthInvalid__c</fullName>
        <label>CurrentMonthInvalid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrentMonthTotal__c</fullName>
        <label>CurrentMonthTotal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrentMonthValid__c</fullName>
        <label>CurrentMonthValid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrentWeekInvalid__c</fullName>
        <label>CurrentWeekInvalid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrentWeekTotal__c</fullName>
        <label>CurrentWeekTotal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrentWeekValid__c</fullName>
        <label>CurrentWeekValid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DealerName__c</fullName>
        <label>DealerName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DealerTotal__c</fullName>
        <label>DealerTotal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <label>Dealer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_vehicles_Sub_dealer_vehicles__c</fullName>
        <label>Dealer vehicles &amp; Sub-dealer vehicles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Government_vehicles__c</fullName>
        <label>Government vehicles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Illegal_Dealer__c</fullName>
        <label>Illegal Dealer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invalid__c</fullName>
        <label>Invalid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invalid_contact__c</fullName>
        <label>Invalid contact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LastMonthInvalid__c</fullName>
        <label>LastMonthInvalid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LastMonthTotal__c</fullName>
        <label>LastMonthTotal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LastMonthValid__c</fullName>
        <label>LastMonthValid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LastWeekInvalid__c</fullName>
        <label>LastWeekInvalid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LastWeekTotal__c</fullName>
        <label>LastWeekTotal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LastWeekValid__c</fullName>
        <label>LastWeekValid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MonthlyInvalidComparision__c</fullName>
        <formula>IF( CurrentMonthInvalid__c = null || CurrentMonthInvalid__c = 0, &apos;-&apos;, TEXT(ROUND((LastMonthInvalid__c / CurrentMonthInvalid__c - 1) * 100, 2)) + &apos;%&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MonthlyInvalidComparision</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MonthlyTotalComparision__c</fullName>
        <formula>IF( CurrentMonthTotal__c = null || CurrentMonthTotal__c  = 0, &apos;-&apos;, TEXT(ROUND((LastMonthTotal__c / CurrentMonthTotal__c - 1) * 100, 2)) + &apos;%&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MonthlyTotalComparision</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MonthlyValidComparision__c</fullName>
        <formula>IF( CurrentMonthValid__c = null || CurrentMonthValid__c = 0, &apos;-&apos;, TEXT(ROUND((LastMonthValid__c / CurrentMonthValid__c - 1) * 100, 2)) + &apos;%&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MonthlyValidComparision</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSI_Created_Date__c</fullName>
        <label>SSI Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Same_Contact__c</fullName>
        <label>Same Contact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Same_VIN__c</fullName>
        <label>Same VIN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Same_VIN_and_different_contact_name__c</fullName>
        <label>Same VIN and different contact name</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Same_VIN_and_same_contact_name__c</fullName>
        <label>Same VIN and same contact name</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Same_VIN_of_current_period__c</fullName>
        <label>Same VIN of current period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Same_contact_and_different_contact_name__c</fullName>
        <label>Same contact and different contact name</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Same_contact_and_same_contact_name__c</fullName>
        <label>Same contact and same contact name</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Same_contact_info_of_current_period__c</fullName>
        <label>Same contact info of current period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sinotrust_Number__c</fullName>
        <label>Sinotrust Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_cannot_match__c</fullName>
        <label>Time cannot match</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Weekly New Dealers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly New CarModels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly Invalid Total</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly Comparision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly Invalid Detail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly Invalid Total</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly Comparision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly Invalid Detail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Valid__c</fullName>
        <label>Valid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VehicleCBUCKD__c</fullName>
        <label>VehicleCBUCKD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VehicleDesc__c</fullName>
        <label>VehicleDesc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VehicleModel__c</fullName>
        <label>VehicleModel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VehicleTotal__c</fullName>
        <label>VehicleTotal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WeeklyInvalidComparision__c</fullName>
        <formula>IF( CurrentWeekInvalid__c = null || CurrentWeekInvalid__c = 0, &apos;-&apos;, TEXT(ROUND((LastWeekInvalid__c / CurrentWeekInvalid__c - 1) * 100, 2)) + &apos;%&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WeeklyInvalidComparision</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WeeklyTotalComparision__c</fullName>
        <formula>IF( CurrentWeekTotal__c = null || CurrentWeekTotal__c = 0, &apos;-&apos;, TEXT(ROUND((LastWeekTotal__c / CurrentWeekTotal__c - 1) * 100, 2)) + &apos;%&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WeeklyTotalComparision</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WeeklyValidComparision__c</fullName>
        <formula>IF( CurrentWeekValid__c = null || CurrentWeekValid__c = 0, &apos;-&apos;, TEXT(ROUND((LastWeekValid__c / CurrentWeekValid__c - 1) * 100, 2)) + &apos;%&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WeeklyValidComparision</label>
        <type>Text</type>
    </fields>
    <label>smart SSI Cleansing result</label>
    <nameField>
        <displayFormat>A-{00000000}</displayFormat>
        <label>smart SSI Cleansing result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>smart SSI Cleansing results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>